--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.3.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "sass": "^1.72.0",
